basic layout modification

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html>
     {{- partial "head.html" . -}}
@@ -9,3 +10,5 @@
         {{- partial "footer.html" . -}}
     </body>
 </html>
+-->
+<p>hugo: This is coming from the baseof template.</p>
