--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,4 @@
-<h1>hugo: This is an index.html file.</h1>
-
-{{ .Content -}}
+{{ partial "header" . }}
+		<h1>hugo: This is an index.html file.</h1>
+		{{ .Content -}}
+{{ partial "footer" . }}
