working css target at sakura

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<!--<link href="https://unpkg.com/sakura.css/css/sakura.css" rel="stylesheet">-->
+		<link href="/sakura.css" rel="stylesheet">
 
 		<title>{{ .Title }} </title>
 	</head>
