DRY structure where site can easily swap out e.g. the single.html partial

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,3 @@
-{{ partial "header" . }}
-		<h1>hugo: This is an index.html file.</h1>
-		{{ .Content -}}
-{{ partial "footer" . }}
+{{ partial "start" . }}
+		{{ partial "index" . }}
+{{ partial "end" . }}
