--- a/layouts/partials/start.html
+++ b/layouts/partials/start.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<link href="/sakura.css" rel="stylesheet">
 
-		<title>{{ .Title }} </title>
+		<title>{{ .Title }}</title>
 	</head>
 	<body>
 		<h1>{{ .Title }}</h1>
-		<p>hugo: This is coming from the header.html partial.</p>
+		<p>hugo: This is coming from the start.html partial.</p>
