--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,11 +1,3 @@
-{{ partial "header" . }}
-		<h1>hugo: This is a list page.</h1>
-
-		{{ .Content -}}
-
-		<ul>
-		{{- range.Pages }}
-			<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-		{{ end -}}
-		</ul>
-{{ partial "footer" . }}
+{{ partial "start" . }}
+		{{ partial "list" . }}
+{{ partial "end" . }}
