--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,4 +1,3 @@
-{{ partial "header" . }}
-		<h1>hugo: This is a single page.</h1>
-		{{ .Content -}}
-{{ partial "footer" . }}
+{{ partial "start" . }}
+		{{ partial "single" . }}
+{{ partial "end" . }}
