--- a/layouts/partials/single.html
+++ b/layouts/partials/single.html
@@ -1,2 +1,8 @@
 <h1>{{ .Title }}</h1>
+<p>(Initially written on {{ .Date.Format "2006-01-02" }})</p>
+<hr>
+
 {{ .Content -}}
+
+<hr>
+<a href="..">{{ singularize .CurrentSection.Title }} Index</a>
