--- a/static/sakura.css
+++ b/static/sakura.css
@@ -229,7 +229,8 @@ body {
 }
 
 a img.social {
-	max-width: 20px;
+	width: 3rem;
+	height: 3rem;
 	display: inline;
 	margin-bottom: 0;
 	padding: 0;
