--- a/layouts/partials/start.html
+++ b/layouts/partials/start.html
@@ -7,7 +7,7 @@
 
 <link rel="canonical" href="{{ .Site.BaseURL }}">
 <link rel="icon" href="/favicon.png">
-<link rel="stylesheet" href="/sakura-based.css" type="text/css">
+<link rel="stylesheet" href="/sakura.css" type="text/css">
 <link rel="stylesheet" href="/main.css" type="text/css">
 
 {{ with .Params.customCSS }}
