--- a/static/main.css
+++ b/static/main.css
@@ -15,3 +15,17 @@ a img.social {
 li {
 	margin-bottom: 0.2em;
 }
+
+canvas#snow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.main-content {
+  position: relative;
+  z-index: 1;
+}
