--- a/layouts/partials/start.html
+++ b/layouts/partials/start.html
@@ -10,6 +10,10 @@
 <link rel="stylesheet" href="/sakura.css" type="text/css">
 <link rel="stylesheet" href="/main.css" type="text/css">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 {{ with .Params.customCSS }}
 <link rel="stylesheet" href="/{{ . }}" type="text/css">
 {{ end }}
