--- a/static/sakura.css
+++ b/static/sakura.css
@@ -7,7 +7,9 @@
 /* Body */
 html {
 	font-size: 62.5%;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+	font-family: "PT Serif", serif;
+	font-weight: 400;
+	font-style: normal;
 }
 
 body {
@@ -32,7 +34,6 @@ body {
 }
 h1, h2, h3, h4, h5, h6 {
 	line-height: 1.1;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
 	font-weight: 700;
 	margin-top: 3rem;
 	margin-bottom: 1.5rem;
